# Agent-Trace-Analyzer

./: .gitignore  README.md  history.json  main.py  new.txt  pyproject.toml  report.html  report.json
backend/api/: history_store.py  main.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/compare/: page.tsx
frontend/app/report/[id]/: page.tsx
frontend/components/: AnalyzerBreakdown.tsx  ComparisonCharts.tsx  FindingDrawer.tsx  FindingsTable.tsx  HistoryTrends.tsx  LatencyChart.tsx  SeverityBarChart.tsx  SeverityChart.tsx  SeveritySummary.tsx  SkeletonCard.tsx  SummaryCards.tsx  ThemeToggle.tsx  TokenWasteChart.tsx  TraceComparison.tsx  UploadTrace.tsx
frontend/lib/: api.ts  exportCsv.ts
frontend/types/: report.ts
reports/: audit-large-trace.json
tests/: test_html_exporter.py  test_json_adapter.py  test_latency_analyzer.py  test_reasoning_analyzer.py  test_redundancy_analyzer.py  test_token_efficiency_analyzer.py
tests/fixtures/: large_trace.json  reasoning_trace.json  sample_trace.json  slow_trace.json
trace_analyzer/: cli.py
trace_analyzer/adapters/: base.py  json_adapter.py
trace_analyzer/analyzers/: base.py  latency.py  reasoning.py  redundancy.py  registry.py  token_efficiency.py
trace_analyzer/report/: generator.py  html_exporter.py  pdf_exporter.py
trace_analyzer/schema/: report.py  trace.py
