[project]
name = "agent-trace-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.104.0",
    "fastapi>=0.136.1",
    "openai>=2.38.0",
    "pydantic>=2.13.4",
    "rapidfuzz>=3.14.5",
    "reportlab>=4.5.1",
    "rich>=15.0.0",
    "streamlit>=1.57.0",
    "typer>=0.25.1",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.14",
]
